--- a/C1-Natural_Language_Processing_with_Classification_and_Vector_Spaces/W3/Lab/C1_W3_lecture_nb_01_linear_algebra.ipynb
+++ b/C1-Natural_Language_Processing_with_Classification_and_Vector_Spaces/W3/Lab/C1_W3_lecture_nb_01_linear_algebra.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,9 +53,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[1 2 3 4]\n",
+      "<class 'list'>\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(alist)\n",
     "print(narray)\n",
@@ -75,9 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 4 6 8]\n",
+      "[1, 2, 3, 4, 5, 1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "print(narray + narray)\n",
     "print(alist + alist)"
@@ -92,9 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 3  6  9 12]\n",
+      "[1, 2, 3, 4, 5, 1, 2, 3, 4, 5, 1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "print(narray * 3)\n",
     "print(alist * 3)"
@@ -123,9 +152,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3 4]\n",
+      " [1 2 3 4]\n",
+      " [1 2 3 4]]\n",
+      "[[1 2 3 4 5]\n",
+      " [1 2 3 4 5]\n",
+      " [1 2 3 4 5]]\n",
+      "[[1 2 3 4]\n",
+      " [1 1 1 1]\n",
+      " [1 2 3 4]]\n"
+     ]
+    }
+   ],
    "source": [
     "npmatrix1 = np.array([narray, narray, narray]) # Matrix initialized with NumPy arrays\n",
     "npmatrix2 = np.array([alist, alist, alist]) # Matrix initialized with lists\n",
@@ -147,9 +192,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]]\n",
+      "[[2 4]\n",
+      " [6 8]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Example 1:\n",
     "\n",
@@ -160,9 +216,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (3,) + inhomogeneous part.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Example 2:\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m badmatrix \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# Define a matrix. Note the third row contains 3 elements\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(badmatrix) \u001b[38;5;66;03m# Print the malformed matrix\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(badmatrix \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m) \u001b[38;5;66;03m# It is supposed to scale the whole matrix\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (3,) + inhomogeneous part."
+     ]
+    }
+   ],
    "source": [
     "# Example 2:\n",
     "\n",
@@ -184,9 +252,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3 5]\n",
+      " [7 9]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Scale by 2 and translate 1 unit the matrix\n",
     "result = okmatrix * 2 + 1 # For each element in the matrix, multiply by 2 and add 1\n",
@@ -195,9 +272,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 4]\n",
+      " [6 8]]\n",
+      "[[0 0]\n",
+      " [0 0]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Add two compatible matrices\n",
     "result1 = okmatrix + okmatrix\n",
@@ -218,9 +306,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  4]\n",
+      " [ 9 16]]\n"
+     ]
+    }
+   ],
    "source": [
     "result = okmatrix * okmatrix # Multiply each element by itself\n",
     "print(result)"
@@ -239,9 +336,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original matrix 3 x 2\n",
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n",
+      "Transposed matrix 2 x 3\n",
+      "[[1 3 5]\n",
+      " [2 4 6]]\n"
+     ]
+    }
+   ],
    "source": [
     "matrix3x2 = np.array([[1, 2], [3, 4], [5, 6]]) # Define a 3x2 matrix\n",
     "print('Original matrix 3 x 2')\n",
@@ -259,9 +370,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array\n",
+      "[1 2 3 4]\n",
+      "Transposed array\n",
+      "[1 2 3 4]\n"
+     ]
+    }
+   ],
    "source": [
     "nparray = np.array([1, 2, 3, 4]) # Define an array\n",
     "print('Original array')\n",
@@ -279,9 +401,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array\n",
+      "[[1 2 3 4]]\n",
+      "Transposed array\n",
+      "[[1]\n",
+      " [2]\n",
+      " [3]\n",
+      " [4]]\n"
+     ]
+    }
+   ],
    "source": [
     "nparray = np.array([[1, 2, 3, 4]]) # Define a 1 x 4 matrix. Note the 2 level of square brackets\n",
     "print('Original array')\n",
@@ -305,9 +441,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.477225575051661\n",
+      "5.477225575051661\n"
+     ]
+    }
+   ],
    "source": [
     "nparray1 = np.array([1, 2, 3, 4]) # Define an array\n",
     "norm1 = np.linalg.norm(nparray1)\n",
@@ -331,9 +476,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3.74165739 3.74165739]\n",
+      "[1.41421356 2.82842712 4.24264069]\n"
+     ]
+    }
+   ],
    "source": [
     "nparray2 = np.array([[1, 1], [2, 2], [3, 3]]) # Define a 3 x 2 matrix. \n",
     "\n",
@@ -366,9 +520,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38\n",
+      "38\n",
+      "38\n",
+      "38\n"
+     ]
+    }
+   ],
    "source": [
     "nparray1 = np.array([0, 1, 2, 3]) # Define an array\n",
     "nparray2 = np.array([4, 5, 6, 7]) # Define an array\n",
@@ -399,9 +564,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 = 11\n"
+     ]
+    }
+   ],
    "source": [
     "norm1 = np.dot(np.array([1, 2]), np.array([3, 4])) # Dot product on nparrays\n",
     "norm2 = np.dot([1, 2], [3, 4]) # Dot product on python lists\n",
@@ -432,9 +605,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum by columns: \n",
+      "[ 6 -6]\n",
+      "Sum by rows:\n",
+      "[0 0 0]\n"
+     ]
+    }
+   ],
    "source": [
     "nparray2 = np.array([[1, -1], [2, -2], [3, -3]]) # Define a 3 x 2 matrix. \n",
     "\n",
@@ -459,9 +643,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix mean: \n",
+      "0.0\n",
+      "Mean by columns: \n",
+      "[ 2. -2.]\n",
+      "Mean by rows:\n",
+      "[0. 0. 0.]\n"
+     ]
+    }
+   ],
    "source": [
     "nparray2 = np.array([[1, -1], [2, -2], [3, -3]]) # Define a 3 x 2 matrix. Chosen to be a matrix with 0 mean\n",
     "\n",
@@ -490,9 +687,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original matrix\n",
+      "[[1 1]\n",
+      " [2 2]\n",
+      " [3 3]]\n",
+      "Centered by columns matrix\n",
+      "[[-1. -1.]\n",
+      " [ 0.  0.]\n",
+      " [ 1.  1.]]\n",
+      "New mean by column\n",
+      "[0. 0.]\n"
+     ]
+    }
+   ],
    "source": [
     "nparray2 = np.array([[1, 1], [2, 2], [3, 3]]) # Define a 3 x 2 matrix. \n",
     "\n",
@@ -518,9 +732,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original matrix\n",
+      "[[1 3]\n",
+      " [2 4]\n",
+      " [3 5]]\n",
+      "Centered by rows matrix\n",
+      "[[-1.  1.]\n",
+      " [-1.  1.]\n",
+      " [-1.  1.]]\n",
+      "New mean by rows\n",
+      "[0. 0. 0.]\n"
+     ]
+    }
+   ],
    "source": [
     "nparray2 = np.array([[1, 3], [2, 4], [3, 5]]) # Define a 3 x 2 matrix. \n",
     "\n",
@@ -545,9 +776,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0  ==  3.0\n"
+     ]
+    }
+   ],
    "source": [
     "nparray2 = np.array([[1, 3], [2, 4], [3, 5]]) # Define a 3 x 2 matrix. \n",
     "\n",
@@ -583,7 +822,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
