--- a/C2-Natural_Language_Processing_with_Probabilistic_Models/W1/Lab/C2_W1_lecture_nb_02_candidates_from_edits.ipynb
+++ b/C2-Natural_Language_Processing_with_Probabilistic_Models/W1/Lab/C2_W1_lecture_nb_02_candidates_from_edits.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,9 +33,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', 'dearz']\n",
+      "['d', 'earz']\n",
+      "['de', 'arz']\n",
+      "['dea', 'rz']\n",
+      "['dear', 'z']\n",
+      "['dearz', '']\n"
+     ]
+    }
+   ],
    "source": [
     "# splits with a loop\n",
     "splits_a = []\n",
@@ -48,9 +61,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('', 'dearz')\n",
+      "('d', 'earz')\n",
+      "('de', 'arz')\n",
+      "('dea', 'rz')\n",
+      "('dear', 'z')\n",
+      "('dearz', '')\n"
+     ]
+    }
+   ],
    "source": [
     "# same splits, done using a list comprehension\n",
     "splits_b = [(word[:i], word[i:]) for i in range(len(word) + 1)]\n",
@@ -71,9 +97,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word :  dearz\n",
+      "earz  <-- delete  d\n",
+      "darz  <-- delete  e\n",
+      "derz  <-- delete  a\n",
+      "deaz  <-- delete  r\n",
+      "dear  <-- delete  z\n"
+     ]
+    }
+   ],
    "source": [
     "# deletes with a loop\n",
     "splits = splits_a\n",
@@ -96,9 +135,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word :  dearz\n",
+      "first item from the splits list :  ['', 'dearz']\n",
+      "L :  \n",
+      "R :  dearz\n",
+      "*** now implicit delete by excluding the leading letter ***\n",
+      "L + R[1:] :  earz  <-- delete  d\n"
+     ]
+    }
+   ],
    "source": [
     "# breaking it down\n",
     "print('word : ', word)\n",
@@ -125,9 +177,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['earz', 'darz', 'derz', 'deaz', 'dear']\n",
+      "*** which is the same as ***\n",
+      "earz\n",
+      "darz\n",
+      "derz\n",
+      "deaz\n",
+      "dear\n"
+     ]
+    }
+   ],
    "source": [
     "# deletes with a list comprehension\n",
     "splits = splits_a\n",
@@ -160,9 +226,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vocab :  ['dean', 'deer', 'dear', 'fries', 'and', 'coke']\n",
+      "edits :  ['earz', 'darz', 'derz', 'deaz', 'dear']\n",
+      "vocab_set :  {'dear', 'coke', 'dean', 'and', 'deer', 'fries'}\n",
+      "candidate words :  {'dear'}\n"
+     ]
+    }
+   ],
    "source": [
     "vocab = ['dean','deer','dear','fries','and','coke']\n",
     "edits = list(deletes)\n",
@@ -173,7 +250,11 @@
     "candidates=[]\n",
     "\n",
     "### START CODE HERE ###\n",
-    "#candidates = ??  # hint: 'set.intersection'\n",
+    "# Convert vocab to a aset\n",
+    "vocab_set = set(vocab)\n",
+    "print('vocab_set : ', vocab_set)\n",
+    "# Find the intersection of vocab_set and edits\n",
+    "candidates = vocab_set.intersection(edits)\n",
     "### END CODE HERE ###\n",
     "\n",
     "print('candidate words : ', candidates)"
@@ -223,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
