chore(c4_w1_assignment): complete assignment

--- a/C4-Natural_Language_Processing_with_Attention_Models/W1/Assignment/C4W1_Assignment.ipynb
+++ b/C4-Natural_Language_Processing_with_Attention_Models/W1/Assignment/C4W1_Assignment.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f9ef370d",
    "metadata": {
     "deletable": false,
@@ -39,7 +39,28 @@
      "graded"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\lenovo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow_text'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtf\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcollections\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Counter\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (sentences, train_data, val_data, english_vectorizer, portuguese_vectorizer, \n\u001b[0;32m      8\u001b[0m                    masked_loss, masked_acc, tokens_to_text)\n",
+      "File \u001b[1;32md:\\0. Bangkit Academy 2024\\Coursera\\Advanced_Course\\Natural_Language_Processing_Specialization\\C4-Natural_Language_Processing_with_Attention_Models\\W1\\Assignment\\utils.py:3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtf\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow_text\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtf_text\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpathlib\u001b[39;00m\n\u001b[0;32m      6\u001b[0m path_to_file \u001b[38;5;241m=\u001b[39m pathlib\u001b[38;5;241m.\u001b[39mPath(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpor-eng/por.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow_text'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3' # Setting this env variable prevents TF warnings from showing up\n",
@@ -433,16 +454,16 @@
     "        ### START CODE HERE ###\n",
     "\n",
     "        self.embedding = tf.keras.layers.Embedding(  \n",
-    "            input_dim=None,\n",
-    "            output_dim=None,\n",
-    "            mask_zero=None\n",
+    "            input_dim=vocab_size,\n",
+    "            output_dim=units,\n",
+    "            mask_zero=True\n",
     "        )  \n",
     "\n",
     "        self.rnn = tf.keras.layers.Bidirectional(  \n",
     "            merge_mode=\"sum\",  \n",
-    "            layer=tf.keras.layers.None(\n",
-    "                units=None,\n",
-    "                return_sequences=None\n",
+    "            layer=tf.keras.layers.LSTM(\n",
+    "                units=units,\n",
+    "                return_sequences=True\n",
     "            ),  \n",
     "        )  \n",
     "\n",
@@ -461,10 +482,10 @@
     "        ### START CODE HERE ###\n",
     "\n",
     "        # Pass the context through the embedding layer\n",
-    "        x = None\n",
+    "        x = self.embedding(context)\n",
     "\n",
     "        # Pass the output of the embedding through the RNN\n",
-    "        x = None\n",
+    "        x = self.rnn(x)\n",
     "\n",
     "        ### END CODE HERE ###\n",
     "\n",
@@ -574,9 +595,9 @@
     "        ### START CODE HERE ###\n",
     "\n",
     "        self.mha = ( \n",
-    "            tf.keras.layers.None(\n",
-    "                key_dim=None,\n",
-    "                num_heads=None\n",
+    "            tf.keras.layers.MultiHeadAttention(\n",
+    "                key_dim=units,\n",
+    "                num_heads=1\n",
     "            ) \n",
     "        )  \n",
     "\n",
@@ -600,9 +621,9 @@
     "        # Call the MH attention by passing in the query and value\n",
     "        # For this case the query should be the translation and the value the encoded sentence to translate\n",
     "        # Hint: Check the call arguments of MultiHeadAttention in the docs\n",
-    "        attn_output = None(\n",
-    "            query=None,\n",
-    "            value=None\n",
+    "        attn_output = self.mha(\n",
+    "            query=target,\n",
+    "            value=context\n",
     "        )  \n",
     "\n",
     "        ### END CODE HERE ###\n",
@@ -726,32 +747,32 @@
     "        ### START CODE HERE ###\n",
     "\n",
     "        # The embedding layer\n",
-    "        self.embedding = tf.keras.layers.None(\n",
-    "            input_dim=None,\n",
-    "            output_dim=None,\n",
-    "            mask_zero=None\n",
+    "        self.embedding = tf.keras.layers.Embedding(\n",
+    "            input_dim=vocab_size,\n",
+    "            output_dim=units,\n",
+    "            mask_zero=True\n",
     "        )  \n",
     "\n",
     "        # The RNN before attention\n",
-    "        self.pre_attention_rnn = tf.keras.layers.None(\n",
-    "            units=None,\n",
-    "            return_sequences=None,\n",
-    "            return_state=None\n",
+    "        self.pre_attention_rnn = tf.keras.layers.LSTM(\n",
+    "            units=units,\n",
+    "            return_sequences=True,\n",
+    "            return_state=True\n",
     "        )  \n",
     "\n",
     "        # The attention layer\n",
-    "        self.attention = None(None)\n",
+    "        self.attention = CrossAttention(units=units)\n",
     "\n",
     "        # The RNN after attention\n",
-    "        self.post_attention_rnn = tf.keras.layers.None(\n",
-    "            units=None,\n",
-    "            return_sequences=None\n",
+    "        self.post_attention_rnn = tf.keras.layers.LSTM(\n",
+    "            units=units,\n",
+    "            return_sequences=True\n",
     "        )  \n",
     "\n",
     "        # The dense layer with logsoftmax activation\n",
-    "        self.output_layer = tf.keras.layers.None(\n",
-    "            units=None,\n",
-    "            activation=None\n",
+    "        self.output_layer = tf.keras.layers.Dense(\n",
+    "            units=vocab_size,\n",
+    "            activation=tf.nn.log_softmax\n",
     "        )  \n",
     "\n",
     "        ### END CODE HERE ###\n",
@@ -771,22 +792,22 @@
     "        ### START CODE HERE ###\n",
     "\n",
     "        # Get the embedding of the input\n",
-    "        x = self.None(None)\n",
+    "        x = self.embedding(target)\n",
     "\n",
     "        # Pass the embedded input into the pre attention LSTM\n",
     "        # Hints:\n",
     "        # - The LSTM you defined earlier should return the output alongside the state (made up of two tensors)\n",
     "        # - Pass in the state to the LSTM (needed for inference)\n",
-    "        x, hidden_state, cell_state = self.None(None, initial_state=None)\n",
+    "        x, hidden_state, cell_state = self.pre_attention_rnn(x, initial_state=state)\n",
     "\n",
     "        # Perform cross attention between the context and the output of the LSTM (in that order)\n",
-    "        x = self.None(None, None)\n",
+    "        x = self.attention(context, x)\n",
     "\n",
     "        # Do a pass through the post attention LSTM\n",
-    "        x = self.None(None)\n",
+    "        x = self.post_attention_rnn(x)\n",
     "\n",
     "        # Compute the logits\n",
-    "        logits = self.None(None)\n",
+    "        logits = self.output_layer(x)\n",
     "\n",
     "        ### END CODE HERE ###\n",
     "\n",
@@ -891,10 +912,10 @@
     "        ### START CODE HERE ###\n",
     "\n",
     "        # Define the encoder with the appropriate vocab_size and number of units\n",
-    "        self.encoder = None\n",
+    "        self.encoder = Encoder(vocab_size, units)\n",
     "\n",
     "        # Define the decoder with the appropriate vocab_size and number of units\n",
-    "        self.decoder = None\n",
+    "        self.decoder = Decoder(vocab_size, units)\n",
     "\n",
     "        ### END CODE HERE ###\n",
     "\n",
@@ -911,13 +932,13 @@
     "        ### START CODE HERE ###\n",
     "\n",
     "        # In this case inputs is a tuple consisting of the context and the target, unpack it into single variables\n",
-    "        context, target = None\n",
+    "        context, target = inputs\n",
     "\n",
     "        # Pass the context through the encoder\n",
-    "        encoded_context = None\n",
+    "        encoded_context = self.encoder(context)\n",
     "\n",
     "        # Compute the logits by passing the encoded context and the target to the decoder\n",
-    "        logits = None\n",
+    "        logits = self.decoder(encoded_context, target)\n",
     "\n",
     "        ### END CODE HERE ###\n",
     "\n",
@@ -1216,50 +1237,50 @@
     "    # PROCESS THE SENTENCE TO TRANSLATE\n",
     "    \n",
     "    # Convert the original string into a tensor\n",
-    "    text = tf.None(None)[tf.None]\n",
+    "    text = tf.convert_to_tensor(text)[tf.newaxis]\n",
     "    \n",
     "    # Vectorize the text using the correct vectorizer\n",
-    "    context = None(None).to_tensor()\n",
+    "    context = english_vectorizer(text).to_tensor()\n",
     "    \n",
     "    # Get the encoded context (pass the context through the encoder)\n",
     "    # Hint: Remember you can get the encoder by using model.encoder\n",
-    "    context = None.None(None)\n",
+    "    context = model.encoder(context)\n",
     "    \n",
     "    # INITIAL STATE OF THE DECODER\n",
     "    \n",
     "    # First token should be SOS token with shape (1,1)\n",
-    "    next_token = tf.None((None, None), None)\n",
+    "    next_token = tf.fill((1, 1), sos_id)\n",
     "    \n",
     "    # Initial hidden and cell states should be tensors of zeros with shape (1, UNITS)\n",
-    "    state = [tf.None((None, None)), tf.None((None, None))]\n",
+    "    state = [tf.zeros((1, UNITS)), tf.zeros((1, UNITS))]\n",
     "    \n",
     "    # You are done when you draw a EOS token as next token (initial state is False)\n",
-    "    done = None\n",
+    "    done = False\n",
     "\n",
     "    # Iterate for max_length iterations\n",
-    "    for None in None(None):\n",
+    "    for _ in range(max_length):\n",
     "        # Generate the next token\n",
     "        try:\n",
-    "            next_token, logit, state, done = None(\n",
-    "                decoder=None,\n",
-    "                context=None,\n",
-    "                next_token=None,\n",
-    "                done=None,\n",
-    "                state=None,\n",
-    "                temperature=None\n",
+    "            next_token, logit, state, done = generate_next_token(\n",
+    "                decoder=model.decoder,\n",
+    "                context=context,\n",
+    "                next_token=next_token,\n",
+    "                done=done,\n",
+    "                state=state,\n",
+    "                temperature=temperature\n",
     "            )\n",
     "        except:\n",
     "             raise Exception(\"Problem generating the next token\")\n",
     "        \n",
     "        # If done then break out of the loop\n",
-    "        if None:\n",
-    "            None\n",
+    "        if done:\n",
+    "            break\n",
     "        \n",
     "        # Add next_token to the list of tokens\n",
-    "        None.None(None)\n",
+    "        tokens.append(next_token)\n",
     "        \n",
     "        # Add logit to the list of logits\n",
-    "        None.None(None)\n",
+    "        logits.append(logit)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -1535,40 +1556,40 @@
     "    \n",
     "    # Make a frequency table of the candidate and reference tokens\n",
     "    # Hint: use the Counter class (already imported)\n",
-    "    candidate_word_counts = None\n",
-    "    reference_word_counts = None\n",
+    "    candidate_word_counts = Counter(candidate)\n",
+    "    reference_word_counts = Counter(reference)\n",
     "    \n",
     "    # Initialize overlap at 0\n",
-    "    overlap = None\n",
+    "    overlap = 0\n",
     "    \n",
     "    # Iterate over the tokens in the candidate frequency table\n",
     "    # Hint: Counter is a subclass of dict and you can get the keys \n",
     "    #       out of a dict using the keys method like this: dict.keys()\n",
-    "    for token in None:\n",
+    "    for token in candidate_word_counts:\n",
     "        \n",
     "        # Get the count of the current token in the candidate frequency table\n",
     "        # Hint: You can access the counts of a token as you would access values of a dictionary\n",
-    "        token_count_candidate = None\n",
+    "        token_count_candidate = candidate_word_counts[token]\n",
     "        \n",
     "        # Get the count of the current token in the reference frequency table\n",
     "        # Hint: You can access the counts of a token as you would access values of a dictionary\n",
-    "        token_count_reference = None\n",
+    "        token_count_reference = reference_word_counts[token]\n",
     "        \n",
     "        # Update the overlap by getting the minimum between the two token counts above\n",
-    "        overlap += None\n",
+    "        overlap += min(token_count_candidate, token_count_reference)\n",
     "    \n",
     "    # Compute the precision\n",
     "    # Hint: precision = overlap / (number of tokens in candidate list) \n",
-    "    precision = None\n",
+    "    precision = overlap / len(candidate)\n",
     "    \n",
     "    # Compute the recall\n",
     "    # Hint: recall = overlap / (number of tokens in reference list) \n",
-    "    recall = None\n",
+    "    recall = overlap / len(reference)\n",
     "    \n",
     "    if precision + recall != 0:\n",
     "        # Compute the Rouge1 Score\n",
     "        # Hint: This is equivalent to the F1 score\n",
-    "        f1_score = None\n",
+    "        f1_score = 2 * (precision * recall) / (precision + recall)\n",
     "        \n",
     "        return f1_score\n",
     "    \n",
@@ -1682,20 +1703,20 @@
     "        ### START CODE HERE ###\n",
     "                \n",
     "        # Initially overlap is zero\n",
-    "        overlap = None\n",
+    "        overlap = 0\n",
     "        \n",
     "        # Iterate through all samples (enumerate helps keep track of indexes)\n",
     "        for index_sample, sample in enumerate(samples):\n",
     "\n",
     "            # Skip if the candidate index is the same as the sample index\n",
-    "            if None == None:\n",
-    "                None\n",
+    "            if index_candidate == index_sample:\n",
+    "                continue\n",
     "                \n",
     "            # Get the overlap between candidate and sample using the similarity function\n",
-    "            sample_overlap = None(None, None)\n",
+    "            sample_overlap = similarity_fn(candidate, sample)\n",
     "            \n",
     "            # Add the sample overlap to the total overlap\n",
-    "            overlap += None\n",
+    "            overlap += sample_overlap\n",
     "\n",
     "        ### END CODE HERE ###\n",
     "        \n",
@@ -1983,7 +2004,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
