chore(c4_w2_lab): update tf code without using experimental code

--- a/C4-Natural_Language_Processing_with_Attention_Models/W2/Lab/C4W2_Attention.ipynb
+++ b/C4-Natural_Language_Processing_with_Attention_Models/W2/Lab/C4W2_Attention.ipynb
@@ -50,9 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\lenovo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
@@ -76,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,9 +104,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "query shape: (2, 3)\n",
+      "\n",
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]]\n",
+      "\n",
+      "key shape: (2, 3)\n",
+      "\n",
+      "[[1. 2. 3.]\n",
+      " [4. 5. 6.]]\n",
+      "\n",
+      "value shape: (2, 3)\n",
+      "\n",
+      "[[0. 1. 0.]\n",
+      " [1. 0. 1.]]\n",
+      "\n",
+      "mask shape: (2, 2)\n",
+      "\n",
+      "[[1. 0.]\n",
+      " [1. 1.]]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "q = tf.constant([[1.0, 0.0, 0.0], [0.0, 1.0, 0.0]])\n",
     "display_tensor(q, 'query')\n",
@@ -121,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,16 +228,35 @@
     "    mask_size = q.shape[-2]\n",
     "\n",
     "    # Creates a matrix with ones below the diagonal and 0s above. It should have shape (1, mask_size, mask_size)\n",
-    "    mask = tf.experimental.numpy.tril(tf.ones((mask_size, mask_size)))  \n",
+    "    # mask = tf.experimental.numpy.tril(tf.ones((mask_size, mask_size)))  \n",
+    "    \n",
+    "    # Create a square matrix of ones with shape (mask_size, mask_size)\n",
+    "    ones_matrix = tf.ones((mask_size, mask_size))\n",
+    "    \n",
+    "    # Use tf.linalg.band_part to keep the lower triangular part, setting the upper triangular part to 0\n",
+    "    # tf.linalg.band_part(input, num_lower, num_upper)\n",
+    "    mask = tf.linalg.band_part(ones_matrix, -1, 0)\n",
     "    \n",
     "    return dot_product_attention(q, k, v, mask, scale=scale)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result shape: (2, 3)\n",
+      "\n",
+      "[[0.         1.         0.        ]\n",
+      " [0.8496746  0.15032542 0.8496746 ]]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "result = causal_dot_product_attention(q, k, v)\n",
     "display_tensor(result, 'result')"
@@ -224,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
